[gd_scene load_steps=11 format=2]

[ext_resource path="res://Objects/Game_modes/TDM/endScreen.gd" type="Script" id=1]
[ext_resource path="res://font_s28.tres" type="DynamicFont" id=2]
[ext_resource path="res://Menus/resources/black_btn.tres" type="StyleBox" id=3]
[ext_resource path="res://hg.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://new_font.tres" type="DynamicFont" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0.666667 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 6

[sub_resource type="DynamicFont" id=2]
size = 40
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.188235, 0.215686, 0.654902, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4

[sub_resource type="DynamicFont" id=4]
size = 36
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.866667, 0.137255, 0.137255, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4

[node name="endScreen" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.402
margin_top = -296.747
margin_right = 538.598
margin_bottom = 273.253
rect_pivot_offset = Vector2( 522.699, 326.776 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="winner" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -115.282
margin_top = 53.9423
margin_right = 139.718
margin_bottom = 137.942
custom_fonts/font = ExtResource( 5 )
text = "CT WIN"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="header" type="Panel" parent="."]
anchor_right = 1.0
margin_bottom = 69.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="header"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -87.5
margin_top = -26.0
margin_right = 87.5
margin_bottom = 26.0
custom_fonts/font = SubResource( 2 )
text = "RESULT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ok" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -78.7208
margin_top = -94.0094
margin_right = 73.2792
margin_bottom = -34.0094
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 2 )
text = "OK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CT" type="Panel" parent="."]
anchor_top = 0.33
anchor_right = 1.0
anchor_bottom = 0.33
margin_top = -119.1
margin_right = -522.0
margin_bottom = 118.9
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CT"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -26.0
margin_right = 26.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 4 )
text = "CT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score" type="Label" parent="CT"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -42.0
margin_right = 20.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 5 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="T" type="Panel" parent="."]
anchor_top = 0.33
anchor_right = 1.0
anchor_bottom = 0.33
margin_left = 526.0
margin_top = -118.891
margin_bottom = 119.109
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score2" type="Label" parent="T"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -26.5
margin_top = -42.0
margin_right = 26.5
margin_bottom = 42.0
custom_fonts/font = ExtResource( 5 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="T"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -13.0
margin_right = 13.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 4 )
text = "T"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true
[connection signal="pressed" from="ok" to="." method="_on_ok_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
